chore(swagger): add bearer token auth
