# docs/swagger.json
@@ -81,6 +81,11 @@
         },
         "/link": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получает список коротких ссылок",
                 "consumes": [
                     "application/json"
@@ -130,6 +135,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создает короткую ссылку",
                 "consumes": [
                     "application/json"
@@ -176,6 +186,11 @@
         },
         "/link/{hash}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Удаляет короткую ссылку",
                 "consumes": [
                     "application/json"
@@ -223,6 +238,11 @@
         },
         "/link/{id}": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Обновляет короткую ссылку",
                 "consumes": [
                     "application/json"
@@ -270,6 +290,11 @@
         },
         "/stat": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Возвращает статистику за указанный период, сгруппированную по дням или месяцам.",
                 "consumes": [
                     "application/json"
@@ -544,6 +569,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Введите \"Bearer \u003cтокен\u003e\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
